# CoreDeps

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AlohaIO/: ContextHelper.cpp  ContextHelper.hpp
MonitorClient/: MonitorClient.cpp
ProtoSources/: alohaio.pb.cc  satellite.pb.cc
Protocol/: alohaio.proto  compile.sh
SatelliteClient/: SatelliteClient.cpp
include/: CoBatch.hpp  MonitorClient.hpp  SatelliteClient.hpp  SliceId.hpp  alohaio.pb.h  satellite.pb.h
