CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(CoreDeps)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "-Wall -fPIC")
INCLUDE_DIRECTORIES("include")

SET(SOURCES entry.cpp)
FILE(GLOB SOURCES ${SOURCES} "./include/*.hpp")
FILE(GLOB SOURCES ${SOURCES} "./ProtoSources/*.cc")
FILE(GLOB SOURCES ${SOURCES} "./Common/*.cpp")
FILE(GLOB SOURCES ${SOURCES} "./SatelliteClient/*.cpp")
FILE(GLOB SOURCES ${SOURCES} "./MonitorClient/*.cpp")
FILE(GLOB SOURCES ${SOURCES} "./AlohaIO/ContextHelper.cpp")
LINK_LIBRARIES(colib curl)
ADD_LIBRARY(coredeps SHARED ${SOURCES})
target_include_directories(coredeps INTERFACE include)
INSTALL(TARGETS coredeps LIBRARY DESTINATION lib)
INSTALL(DIRECTORY include/ DESTINATION include/coredeps)
INSTALL(FILES AlohaIO/ContextHelper.hpp DESTINATION include/coredeps)
